# contact_cards

./: Dockerfile  pyproject.toml
contact_cards/: Bot.py  contacts_core.py  main.py
