[tool.poetry]
name = "contact-cards"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "contact_cards"}]

[tool.poetry.dependencies]
python = "^3.10"
black = {extras = ["d"], version = "^23.7.0"}


[build-system]
requires = ["poetry-core>=1.5.1"]
build-backend = "poetry.core.masonry.api"
